[package]
name = "arbitrage_opportunities"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio = {version = "1.38.0", features = ["full"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "^0.12.5", features = ["json"] }
dotenv = "0.15"
strum = "0.26.3"
strum_macros = "0.26.4"
async-trait = "0.1.81"
thiserror = "1.0.63"
once_cell ="1.19.0"
futures-util = "0.3.30"
futures = "0.3.30"
tokio-tungstenite = "0.23.1"