[package]
name = "arbitrage_opportunities"
version = "0.0.4"
edition = "2021"

[dependencies]
tokio = {version = "1.39.3", features = ["full"]}
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "^0.12.4", features = ["json"] }
dotenv = "0.15"
strum = "0.26.3"
strum_macros = "0.26.4"
async-trait = "0.1.81"
thiserror = "1.0.63"
once_cell ="1.19.0"
futures-util = "0.3.30"
futures = "0.3.30"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
ordered-float = "4.2.2"
solana-sdk = "2.0.6"
solana-client = "2.0.6"
lazy_static = "1.5.0"
solana-account-decoder = "2.0.6"
base64 = "0.22.1"